crates/derive-python/src/codegen/snapshots/derive_python__codegen__test__stub_py.snap
---
source: crates/derive-python/src/codegen/mod.rs
expression: stub_output
---
"""Derivation implementation for patterns/sums."""
from collections.abc import AsyncIterator
from patterns.sums import IDerivation, Document, EndpointConfig, Request


# Implementation for derivation patterns/sums.
# `EndpointConfig` is generated from the derivation's `spec.configSchema`.
class Derivation(IDerivation):
    def __init__(self, open: Request.Open, config: EndpointConfig):
        super().__init__(open, config)
        self.config = config

    async def from_ints(self, read: Request.ReadFromInts) -> AsyncIterator[Document]:
        raise NotImplementedError("from_ints not implemented")
        if False:
            yield  # Mark as a generator.

    async def process_strings(self, read: Request.ReadProcessStrings) -> AsyncIterator[Document]:
        raise NotImplementedError("process_strings not implemented")
        if False:
            yield  # Mark as a generator.
